Moved image building from docker-compose to startup script.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   coturn:
     container_name: coturn
     image: coturn:$VERSION_COTURN
-    build: "https://git.scimetis.net/yohan/docker-coturn.git"
+    #build: "https://git.scimetis.net/yohan/docker-coturn.git"
     restart: unless-stopped
     network_mode: "host"
     command: ["--listening-port", "3478", "--verbose", "--fingerprint", "--use-auth-secret", "--static-auth-secret", "$SECRET", "--realm", "scimetis.net", "--total-quota", "100", "--bps-capacity", "0", "--stale-nonce", "--no-multicast-peers"]
